[tool.poetry]
name = "miscellaneous"
version = "0.1.0"
description = ""
authors = ["Angelicornis <dev.angelicornis@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.3.0"
isort = "^5.12.0"
pyflakes = "^3.0.1"
pylint = "^2.17.4"
mypy = "^1.4.1"

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "cv2, pydantic"
disable = [
  "C0114", # missing-module-docstring
  "C0115", # missing-class-docstring
  "C0116", # missing-function-docstring
  "C0301", # line-too-long
  "R0801", # duplicate-code
  "R0903", # to-few-puplic-methods
  "R0902", # to-many-instance-attributes
  "W0212", # protected-access
  "E1101", # no-member
  "C0209", # consider-using-f-string
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
